# CoinApiHttpClient

./: .gitignore  README.md  pyproject.toml
coinapihttpclient/integrations/endpoints/: __init__.py  base_client.py  list_all_assets_by_id.py
coinapihttpclient/project/: app.py
tests/: conftest.py
tests/integrations/endpoints/: test_base_client.py  test_list_all_assets_by_id.py
tests/integrations/endpoints/cassettes/: test_list_all_assets_by_id_error.yaml  test_list_all_assets_by_id_success.yaml
