[tool.poetry]
name = "coinapihttpclient"
version = "0.1.0"
description = ""
authors = ["alfmorais <alfredneto@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"


[tool.poetry.group.test.dependencies]
pre-commit = "^3.5.0"
pytest = "^7.4.3"
ipdb = "^0.13.13"
pytest-vcr = "^1.0.2"
ipython = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
